[arquillian/arquillian-extension-liferay#26] Configure JMX